prevent horizontal scrolling on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -104,6 +104,7 @@ html { scroll-behavior: smooth; }
     --sidebar-accent-foreground: oklch(0.205 0 0);
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
+    overflow-x: hidden
 }
 
 .dark {
